fix: left panel scroll and item image (#1125)
* fix: left panel scroll and stretched item image

* fix: prevent images from growing past their wrapper

--- a/src/components/ItemImage/ItemImage.css
+++ b/src/components/ItemImage/ItemImage.css
@@ -7,7 +7,8 @@
 }
 
 .ItemImage.image-wrapper .image {
-  width: 100%;
+  width: auto;
+  max-width: 100%;
 }
 
 .ItemImage .ItemBadge {
